# 683_Project

./: .gitignore  README.md
AI-Poker-Agent/: custom_player.py  example.py  raise_player.py  randomplayer.py  testperf.py
OMPEval/: CMakeLists.txt  cal_equity.cpp  test_time.cpp
OMPEval/hand-isomorphism/src/: hand_index-impl.h
OMPEval/omp/: CardRange.h
abstraction/: bucket_table.cpp  card_abstraction.py
open-pure-cfr/: CMakeLists.txt  abstract_game.cpp  bucketing_abstraction.hpp  constants.cpp  constants.hpp  parameters.cpp  player_module.cpp
open-pure-cfr/acpc_server_code/: game.c
open-pure-cfr/games/: final.game  holdem.limit.2p.reverse_blinds.game
open-pure-cfr/hand-isomorphism/src/: deck.h  hand_index.c  hand_index.h
open-pure-cfr/main/: print_player_strategy.cpp  pure_cfr.cpp
open-pure-cfr/omp/: CardRange.cpp  EquityCalculator.cpp  EquityCalculator.h  Random.h
open-pure-cfr/python/: mcts_agent.cpp  mcts_agent.h  mcts_test  mcts_test.cpp  mod.cpp  setup.py  strategy_parser.h
